# stellar-privacy-analytics

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_ARCHITECTURE.md  CONTRIBUTING.md  HONEST_ASSESSMENT.md  LICENSE  PR_DESCRIPTION_ENCRYPTED_STORAGE.md  PR_DESCRIPTION_FINAL.md  PR_INSTRUCTIONS.md  PR_ISSUE_127.md  PR_ISSUE_192.md  PR_ISSUE_193.md  PR_ISSUE_195.md  PR_NO_CODE_QUERY.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pr-description.md  pr_description.md
backend/: .env.hsm.example  Cargo.toml  Dockerfile  README.md  jest.config.js  knexfile.ts  package-lock.json  package.json  tsconfig.json
backend/docs/: HSM_INTEGRATION.md  PQL_API_README.md  pql-api.yaml
backend/monitoring/: grafana-dashboard.json
backend/src/: index.ts  lib.rs
backend/src/__tests__/: analytics.test.ts  data.test.ts  privacy.test.ts
backend/src/config/: database.ts  hsmConfig.ts  redis.ts
backend/src/gateway/: ABACService.ts  APIKeyManager.ts  LoadBalancer.ts  PerformanceOptimizer.ts  PrivacyApiGateway.ts  PrivacyMetrics.ts  PrivacyPolicyEngine.ts  RequestTransformer.ts  index.ts
backend/src/middleware/: corsMonitor.ts  differentialPrivacy.ts  enhancedRateLimiter.ts  errorHandler.ts  metrics.ts  observability.ts  privacy.ts  rateLimiter.ts  stellarAuth.ts  validation.ts
backend/src/monitoring/: config.rs  mod.rs  prometheus_exporter.rs  rateLimitMonitor.ts
backend/src/repositories/: metadataRepository.ts
backend/src/routes/: analytics.ts  anonymization.ts  audit.ts  auth.ts  certification.ts  compliance-automation.ts  (+16 more)
(+219 files in other folders)
