[package]
name = "stellar-privacy-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Monitoring dependencies
prometheus = "0.13"
warp = "0.3"
base64 = "0.21"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Utility dependencies
anyhow = "1.0"
thiserror = "1.0"

# Differential privacy and cryptographic dependencies
# (Add your existing dependencies here)
# stellar-xdr = "20.1.0"
# curve25519-dalek = "4.0"
# rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "monitoring_service"
path = "src/bin/monitoring_service.rs"

[lib]
name = "stellar_privacy_analytics"
path = "src/lib.rs"
