[package]
name = "zk-verifier-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"